--- a/src/reproductoresMVC/gui/Ventana.form
+++ b/src/reproductoresMVC/gui/Ventana.form
@@ -101,7 +101,7 @@
           <text value="TItulo"/>
         </properties>
       </component>
-      <component id="baeb" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+      <component id="baeb" class="javax.swing.JTextField" binding="campoTitulo">
         <constraints>
           <grid row="2" column="2" row-span="1" col-span="7" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -173,7 +173,7 @@
           <text value="Valoración"/>
         </properties>
       </component>
-      <component id="5e3b2" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+      <component id="5e3b2" class="javax.swing.JTextField" binding="campoAutor">
         <constraints>
           <grid row="4" column="2" row-span="1" col-span="7" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -182,7 +182,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="33987" class="com.github.lgooddatepicker.components.DatePicker">
+      <component id="33987" class="com.github.lgooddatepicker.components.DatePicker" binding="campoFehca">
         <constraints>
           <grid row="10" column="2" row-span="1" col-span="7" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
           <forms/>
@@ -233,7 +233,7 @@
           <text value="Productora"/>
         </properties>
       </component>
-      <component id="6c287" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+      <component id="6c287" class="javax.swing.JTextField" binding="campoProductora">
         <constraints>
           <grid row="8" column="2" row-span="1" col-span="7" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -289,14 +289,16 @@
           <text value="Género"/>
         </properties>
       </component>
-      <component id="1540" class="javax.swing.JTextField" binding="textField4" default-binding="true">
+      <component id="1540" class="javax.swing.JTextField" binding="campoCambiante">
         <constraints>
           <grid row="6" column="2" row-span="1" col-span="7" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
           <forms defaultalign-horz="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <text value=""/>
+        </properties>
       </component>
     </children>
   </grid>
