--- a/src/reproductoresMVC/gui/Ventana.form
+++ b/src/reproductoresMVC/gui/Ventana.form
@@ -281,7 +281,7 @@
           <text value="Género"/>
         </properties>
       </component>
-      <component id="1540" class="javax.swing.JTextField" binding="campoCambiante">
+      <component id="1540" class="javax.swing.JTextField" binding="campoGeneroFluido">
         <constraints>
           <grid row="6" column="2" row-span="1" col-span="7" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
