--- a/src/reproductoresMVC/gui/Ventana.form
+++ b/src/reproductoresMVC/gui/Ventana.form
@@ -38,7 +38,7 @@
     <colspec value="left:4dlu:noGrow"/>
     <colspec value="fill:max(d;4px):noGrow"/>
     <constraints>
-      <xy x="20" y="20" width="509" height="561"/>
+      <xy x="20" y="20" width="509" height="626"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -107,6 +107,7 @@
           <forms defaultalign-horz="false"/>
         </constraints>
         <properties>
+          <name value="Titulo"/>
           <text value=""/>
         </properties>
       </component>
@@ -180,21 +181,27 @@
           </grid>
           <forms defaultalign-horz="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <name value="Autor"/>
+        </properties>
       </component>
       <component id="33987" class="com.github.lgooddatepicker.components.DatePicker" binding="campoFehca">
         <constraints>
           <grid row="10" column="2" row-span="1" col-span="7" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
           <forms/>
         </constraints>
-        <properties/>
+        <properties>
+          <name value="Fecha de salida"/>
+        </properties>
       </component>
       <component id="a272" class="javax.swing.JComboBox" binding="comboIdioma">
         <constraints>
           <grid row="16" column="2" row-span="1" col-span="7" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
           <forms/>
         </constraints>
-        <properties/>
+        <properties>
+          <name value="Idioma"/>
+        </properties>
         <clientProperties>
           <html.disable class="java.lang.Boolean" value="false"/>
         </clientProperties>
@@ -206,6 +213,7 @@
         </constraints>
         <properties>
           <model/>
+          <name value="Formato"/>
         </properties>
       </component>
       <component id="5dd4e" class="javax.swing.JSpinner" binding="campoDuracion">
@@ -213,21 +221,27 @@
           <grid row="14" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
           <forms defaultalign-horz="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <name value="Duracion"/>
+        </properties>
       </component>
       <component id="4ca97" class="javax.swing.JSpinner" binding="campoParticipantes">
         <constraints>
           <grid row="12" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
           <forms defaultalign-horz="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <name value="Nº de participantes"/>
+        </properties>
       </component>
       <component id="20054" class="javax.swing.JSlider" binding="campoValoracion">
         <constraints>
           <grid row="20" column="2" row-span="1" col-span="7" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
           <forms defaultalign-horz="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <name value="Valoración"/>
+        </properties>
       </component>
       <component id="699b9" class="javax.swing.JLabel">
         <constraints>
@@ -245,7 +259,9 @@
           </grid>
           <forms defaultalign-horz="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <name value="Productora"/>
+        </properties>
       </component>
       <component id="f9309" class="javax.swing.JButton" binding="nuevoButton" default-binding="true">
         <constraints>
@@ -291,6 +307,7 @@
           <forms defaultalign-horz="false"/>
         </constraints>
         <properties>
+          <name value=""/>
           <text value=""/>
         </properties>
       </component>
