--- a/src/reproductoresMVC/gui/Ventana.form
+++ b/src/reproductoresMVC/gui/Ventana.form
@@ -38,9 +38,12 @@
     <colspec value="left:4dlu:noGrow"/>
     <colspec value="fill:max(d;4px):noGrow"/>
     <constraints>
-      <xy x="20" y="20" width="509" height="626"/>
+      <xy x="20" y="20" width="540" height="552"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-19458"/>
+      <preferredSize width="500" height="500"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="4841d" class="javax.swing.JLabel">
@@ -58,6 +61,8 @@
           <forms/>
         </constraints>
         <properties>
+          <background color="-19458"/>
+          <focusable value="false"/>
           <selected value="true"/>
           <text value="Música"/>
         </properties>
@@ -68,6 +73,8 @@
           <forms/>
         </constraints>
         <properties>
+          <background color="-19458"/>
+          <focusable value="false"/>
           <selected value="false"/>
           <text value="Podcast"/>
         </properties>
@@ -78,6 +85,8 @@
           <forms/>
         </constraints>
         <properties>
+          <background color="-19458"/>
+          <focusable value="false"/>
           <text value="Audio Libro"/>
         </properties>
       </component>
@@ -87,6 +96,8 @@
           <forms/>
         </constraints>
         <properties>
+          <background color="-19458"/>
+          <focusable value="false"/>
           <text value="Noticias"/>
         </properties>
       </component>
@@ -240,6 +251,7 @@
           <forms defaultalign-horz="false"/>
         </constraints>
         <properties>
+          <background color="-19458"/>
           <name value="Valoración"/>
         </properties>
       </component>
@@ -269,6 +281,9 @@
           <forms/>
         </constraints>
         <properties>
+          <background color="-12961222"/>
+          <borderPainted value="false"/>
+          <foreground color="-1"/>
           <text value="Nuevo"/>
         </properties>
       </component>
@@ -278,6 +293,9 @@
           <forms/>
         </constraints>
         <properties>
+          <background color="-12961222"/>
+          <borderPainted value="false"/>
+          <foreground color="-1"/>
           <text value="Exportar"/>
         </properties>
       </component>
@@ -287,6 +305,9 @@
           <forms/>
         </constraints>
         <properties>
+          <background color="-12961222"/>
+          <borderPainted value="false"/>
+          <foreground color="-1"/>
           <text value="Importar"/>
         </properties>
       </component>
